fixtures/errors/bigint_json.js
JSON.stringify(123n);
